--- a/public/style.css
+++ b/public/style.css
@@ -33,8 +33,8 @@ body {
     overflow: hidden;
     min-height: 100vh;
     min-width: 100vw;
-    /* background: rgb(239, 238, 238); */
-    background: #72afa6;
+    background: var(--pinda-kleur);
+    color: var(--donkerblauw);
 }
 
 main {
@@ -48,13 +48,17 @@ main {
 }
 
 section {
-    width: 20rem;
-    height: 30rem;
+    width: 30rem;
+    height: 40rem;
     background: var(--licht-grijs);
     border-radius: 2rem;
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+section img {
+    margin-top: 1em;
 }
 
 section h1 {
@@ -64,22 +68,15 @@ section h1 {
     font-size: 1rem;
 }
 
-section h1 span {
-    font-size: 0.5rem;
-    display: inline-block;
-    width: 4.5rem;
-    color: #152a45;
-    text-transform: lowercase;
-    margin-left: 1rem;
-}
-
 section ul {
-    margin: 0;
+    margin: 1em;
     padding: 0.2em;
     list-style-type: none;
     flex-grow: 2;
     width: 18em;
     overflow-y: scroll;
+    border: 3px solid var(--pinda-kleur);
+    border-radius: 1em;
 }
 
 ::-webkit-scrollbar {
@@ -89,6 +86,10 @@ section ul {
 section ul > li {
     padding: 0.5rem 1rem;
     font-size: 0.8rem;
+    background-color: var(--pinda-kleur);
+    border-radius: 2em;
+    margin-top: 1em;
+    color: var(--wit);
 }
 
 section form {
@@ -105,10 +106,8 @@ section form input[type="text"] {
     border: none;
     height: 2rem;
     flex-grow: 2;
-    background: #f4eb34;
-    box-shadow: inset 0.2rem 0.2rem 0.3rem 0 rgba(209, 205, 199, 0.5);
-    border-top-left-radius: 2rem;
-    border-bottom-left-radius: 2rem;
+    background: var(--wit);
+    border-radius: 2em;
     border: 0;
     opacity: 80%;
     outline: none;
@@ -117,29 +116,19 @@ section form input[type="text"] {
 section form > button {
     padding: 0 0.6rem 0 0.4rem;
     width: 2rem;
-    background: #f4eb34;
-    box-shadow: inset -0.2rem 0.2rem 0.3rem 0 rgba(209, 205, 199, 0.5);
-    border-top-right-radius: 2rem;
-    border-bottom-right-radius: 2rem;
+    background: var(--pinda-kleur);
+    border-radius: 2em;
     border: 0;
     opacity: 80%;
     outline: none;
     transition: 0.2s;
-}
-
-section form > button span {
-    display: none;
-}
-
-section form > button::after {
-    content: "⇒";
+    margin-left: 0.5em;
 }
 
 section form > button:hover {
-    padding-left: 1rem;
+    padding-bottom: 0.3rem;
 }
 
 section form > button:active {
-    padding-left: 1rem;
-    color: red;
+    padding-bottom: 0.3rem;
 }
